# opencode-plugins

./: .gitignore  .opencode-workflow.yaml  .review-findings.md  CONTEXT.md  LICENSE  README.md  opencode.jsonc.example  package-lock.json  package.json  pyproject.toml  test-awx.ps1
.ai/council/: current
.ai/council/awx-plugin-prd-20260620-135410/: brief.md  decision.yaml  prd-outline.md
.github/workflows/: ci.yml  publish.yml
.metrics/: metrics.json
.opencode/plugins/: awx-plugin.js
.status/handoff/: handoff-awx-plugin-prd-refinement-20260620-140824.md  handoff-awx-plugin-refined-prd-20260620-150456.md
docs/: client-middleware-design.md
docs/adr/: 0001-bearer-token-auth-model.md  0002-output-contract-alignment.md  0003-plugin-api-surface-discovery.md  0004-non-blocking-awx-wait-job.md  0005-extra-var-transformations-in-plugin.md  0006-connection-resilience-parameters.md  0007-plugin-entry-point-export-hygiene.md  0009-structured-not-lose-metadata.md  0010-crud-registry-mutation-envelope.md  0010-publishing-convention.md  0011-three-layer-resource-detail-pattern.md  0012-underscore-standard-tool-naming.md
docs/prd/: add-extra-vars-to-job-status.md  awx-crud-actions.md  awx-plugin-metrics-fixes.md  awx-plugin.md  feat-get-resource-details.md  github-gitlab-plugin-mvp.md  plugin-awx-refined.md
scripts/: worktree-manager.ps1  worktree-manager.sh
src/: __init__.py  main.py
src/config/: settings.py
src/fast_api_eda_gateway/: __init__.py  review_state_tracker.py  routing.py
tests/: __init__.py  test_afk_review_service.py  test_github_forge.py
(+14 files in other folders)
