[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "afk-review-service"
version = "0.1.0"
description = "FastAPI-based AFK Review Service for automated PR review"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.25.0",
    "pytest-env>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
